--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smoggy-shell",
+  "name": "taxborn.com",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^6.0.0-beta.1"
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^6.0.0-beta.1",
+    "tailwindcss": "^4.1.18"
   }
 }
