--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^6.0.0-beta.1",
     "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@catppuccin/tailwindcss": "^1.0.0"
   }
 }
