--- a/.forgejo/workflows/docker.yaml
+++ b/.forgejo/workflows/docker.yaml
@@ -26,7 +26,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
-          password: ${{ secrets.FORGEJO_API_TOKEN }}
+          password: ${{ secrets.FORGEJO_API_SECRET }}
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
