--- a/.forgejo/workflows/docker.yaml
+++ b/.forgejo/workflows/docker.yaml
@@ -1,4 +1,4 @@
-name: Create and publish a Docker image
+name: Create and publish the taxborn.com image
 
 on:
   push:
@@ -15,8 +15,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      # TODO: do we need?
-      attestations: write
       id-token: write
     steps:
       - name: Checkout repository
