--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^10.0.0-beta.4",
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^6.0.0-beta.13",
     "tailwindcss": "^4.1.18"
